# pacifica

./: README.md
source/: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
source/cheat/: CMakeLists.txt  dllmain.cxx  pch.hxx
source/cheat/features/: aim.cxx  aim.hxx
source/cheat/hook/: hook.cxx  hook.hxx
source/cheat/menu/: menu.cxx  menu.hxx
source/cheat/render/: render.cxx  render.hxx
source/cheat/sdk/: bindable.hxx  clock.hxx  game.hxx  input.hxx  list.hxx  scaler.hxx  sdk.hxx  vec2.hxx
source/cheat/utils/: pattern.hxx  utils.cxx  utils.hxx
source/loader/: CMakeLists.txt  main.cxx
